--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -209,10 +209,12 @@ ul li + li {
   opacity: 0.7;
 }
 
-.glossy:hover {
-  transform: scale(1.1) rotate(-3deg);
-  color: rgb(172, 63, 0);
-  filter: hue-rotate(-60deg);
+@media (hover: hover) {
+  .glossy:hover {
+    transform: scale(1.1) rotate(-3deg);
+    color: rgb(172, 63, 0);
+    filter: hue-rotate(-60deg);
+  }
 }
 
 @media screen and (max-width: 600px) {
